export type MemberRole = 'ADMIN' | 'FUNCIONARIO';
export type InviteStatus = 'PENDING' | 'ACCEPTED' | 'RECUSADO' | 'EXPIRED';
